Finalized submission notebook and added descriptions

--- a/submission.ipynb
+++ b/submission.ipynb
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we displayed the count of each disease class in the cassava leaf dataset, providing a numerical overview of how many samples belong to each class."
+    "Here we displayed the count of each disease class in the cassava leaf dataset, providing a numerical overview of how many samples belong to each class. Also, some sample images were displayed."
    ]
   },
   {
@@ -244,23 +244,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Architecture"
+    "## 3. Model Architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section outlines the design and implementation of the deep learning models used for cassava leaf disease classification. The architecture includes custom datasets, data transformations, model definitions, and training procedures.\n",
+    "\n",
+    "### Custom Dataset Class\n",
+    "\n",
+    "To handle the image data efficiently, a custom dataset class `LeafDataset` was created. This class loads the images and their corresponding labels, applying necessary transformations for both training and testing. The class is designed to be flexible, allowing for the processing of both training and testing datasets.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of training samples: 17117\n",
-      "Number of validation samples: 4280\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device(\"mps\" if torch.backends.mps.is_built() else \"cpu\")\n",
     "\n",
@@ -294,8 +296,33 @@
     "            label = self.dataframe.iloc[idx, 1]\n",
     "            if self.transform:\n",
     "                image = self.transform(image)\n",
-    "            return image, label\n",
+    "            return image, label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Transformations\n",
     "\n",
+    "Data transformations are critical in deep learning tasks involving image data. In this project, images are resized to a standard size of 224x224 pixels. Additionally, normalization is applied to ensure the pixel values have a mean of `[0.485, 0.456, 0.406]` and a standard deviation of `[0.229, 0.224, 0.225]`, which are standard for pre-trained models like ResNet and EfficientNet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training samples: 17117\n",
+      "Number of validation samples: 4280\n"
+     ]
+    }
+   ],
+   "source": [
     "# Data Transformations\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
@@ -321,6 +348,21 @@
     "\n",
     "# Load data\n",
     "train_loader, val_loader = load_data('./data/train.csv', './data/train_images')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Definitions\n",
+    "\n",
+    "Two state-of-the-art deep learning models, ResNet50 and EfficientNetB0, were used in this project. Both models are well-known for their accuracy in image classification tasks:\n",
+    "\n",
+    "- **ResNet50:** A deep convolutional neural network with 50 layers, ResNet50 uses skip connections to help with gradient flow and allows for training much deeper networks without encountering vanishing gradients.\n",
+    "  \n",
+    "- **EfficientNetB0:** A more recent model, EfficientNetB0 scales all dimensions of the network (depth, width, and resolution) uniformly using a compound scaling method, making it more efficient in terms of performance and computational cost.\n",
+    "\n",
+    "Both models were fine-tuned by replacing their final fully connected layers with new layers appropriate for this specific classification task, which involves predicting one of five classes.\n"
    ]
   },
   {
@@ -355,7 +397,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Result and Analysis"
+    "# 4. Result and Analysis {-}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training Process\n",
+    "\n",
+    "The training process involved several steps:\n",
+    "\n",
+    "1. **Model Selection:** The appropriate model (ResNet50 or EfficientNetB0) was selected based on the user's input or hyperparameter tuning.\n",
+    "\n",
+    "2. **Loss Function and Optimizer:** Cross-entropy loss was used as the loss function, which is standard for classification tasks. The optimizer (either Adam or SGD) was chosen based on hyperparameter tuning.\n",
+    "\n",
+    "3. **Training Loop:** The model was trained for a predefined number of epochs, with early stopping implemented to prevent overfitting. The training loop included monitoring the training and validation loss and accuracy to assess the model's performance.\n",
+    "\n",
+    "4. **Model Evaluation:** After each epoch, the model was evaluated on the validation set, and the best-performing model was saved for final testing.\n",
+    "\n",
+    "This comprehensive approach ensures that the models are well-trained and capable of accurately classifying cassava leaf diseases, which is crucial for developing a practical and reliable tool for farmers in Sub-Saharan Africa."
    ]
   },
   {
@@ -433,11 +494,35 @@
     "                print(f'Early stopping triggered after epoch {epoch+1}')\n",
     "                break\n",
     "\n",
-    "    return best_val_acc\n",
+    "    return best_val_acc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyperparameter Tuning with Optuna\n",
     "\n",
+    "To optimize the hyperparameters of the deep learning models, we used **Optuna**, an automatic hyperparameter optimization software framework. The goal was to maximize the validation accuracy of the cassava leaf disease classification model by tuning the following hyperparameters:\n",
+    "\n",
+    "- **Model Selection:** Either `ResNet50` or `EfficientNetB0`.\n",
+    "- **Learning Rate (`lr`):** A floating-point value between `1e-5` and `1e-1`.\n",
+    "- **Batch Size:** Either `16` or `64`.\n",
+    "- **Optimizer:** Either `Adam` or `SGD`.\n",
+    "\n",
+    "#### Optuna Objective Function\n",
+    "\n",
+    "The **objective function** is defined to suggest these hyperparameters using Optuna's `suggest_*` methods. The model is then trained and evaluated using these hyperparameters, and the validation accuracy (`best_val_acc`) is returned as the objective value. The objective function is crucial as it guides the search process to find the best combination of hyperparameters.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Optuna Objective Function\n",
     "def objective(trial):\n",
-    "    # Suggest hyperparameters\n",
     "    model_name = trial.suggest_categorical(\"model\", [\"resnet50\", \"efficientnet\"])\n",
     "    lr = trial.suggest_float(\"lr\", 1e-5, 1e-1)\n",
     "    batch_size = trial.suggest_categorical(\"batch_size\", [16, 64])\n",
@@ -451,6 +536,21 @@
     "    best_val_acc = train_model(model, train_loader, val_loader, criterion, optimizer, num_epochs=10, patience=2)\n",
     "    \n",
     "    return best_val_acc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optuna Study\n",
+    "\n",
+    "An **Optuna study** was created with the following configurations:\n",
+    "\n",
+    "- **Direction:** Maximize the validation accuracy.\n",
+    "- **Sampler:** `TPESampler`, which is efficient for optimizing hyperparameters.\n",
+    "- **Pruner:** `MedianPruner`, which stops unpromising trials early to speed up the search.\n",
+    "\n",
+    "The study was run for 10 trials, and the best trial was identified based on the highest validation accuracy. Below is the output from the optimization process:\n"
    ]
   },
   {
@@ -688,6 +788,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Best Trial\n",
+    "\n",
+    "After running 10 trials, the best trial was identified with the following hyperparameters:\n",
+    "\n",
+    "- **Model:** EfficientNetB0\n",
+    "- **Learning Rate:** 0.07849653799366987\n",
+    "- **Batch Size:** 16\n",
+    "- **Optimizer:** SGD\n",
+    "\n",
+    "This trial achieved the highest validation accuracy of **85.28%**, and the early stopping mechanism ensured that the model training was efficient, preventing overfitting.\n",
+    "\n",
+    "These results demonstrate the effectiveness of hyperparameter tuning using Optuna in improving the performance of deep learning models for cassava leaf disease classification.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualizations\n",
+    "\n",
+    "The `visualize_optuna_results` function generates two key visualizations to help understand the optimization process and the importance of different hyperparameters:\n",
+    "\n",
+    "1. **Optimization History Plot:**\n",
+    "   - This plot shows the progression of the objective value (validation accuracy) across different trials during the hyperparameter optimization process.\n",
+    "   - Each blue dot represents a trial, with the corresponding objective value plotted on the y-axis. The x-axis represents the number of trials.\n",
+    "   - The plot highlights the best trial with a red star, which corresponds to the highest validation accuracy.\n",
+    "   - Annotations are added to each point, showing the hyperparameters used in that trial (e.g., model type, learning rate, batch size, optimizer).\n",
+    "   - The plot allows you to see how the objective value improves (or worsens) with different combinations of hyperparameters, providing insights into which settings are most effective.\n",
+    "\n",
+    "2. **Parameter Importances Plot:**\n",
+    "   - This bar chart shows the relative importance of each hyperparameter in determining the model's performance.\n",
+    "   - The height of each bar indicates the importance score, with the optimizer having the highest importance in this study, followed by the learning rate (`lr`).\n",
+    "   - This visualization helps in understanding which hyperparameters have the most significant impact on the model's accuracy, allowing for more focused tuning in future experiments.\n",
+    "\n",
+    "These visualizations provide valuable insights into the hyperparameter tuning process, making it easier to interpret the results and refine the model further.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -767,6 +910,14 @@
     "    print(\"Visualization results displayed inline\")\n",
     "\n",
     "visualize_optuna_results(study)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "After identifying the optimal hyperparameters through the Optuna study, the next step involves training the final model using these best parameters.\n"
    ]
   },
   {
@@ -1262,7 +1413,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Submission"
+    "### Final Model Training Output\n",
+    "\n",
+    "The final model was trained using the best hyperparameters identified by the Optuna study. Below is a summary of the training process and the model's structure:\n",
+    "\n",
+    "#### Training Process\n",
+    "\n",
+    "- **Epoch 1:** The model started with a training loss of 0.6201 and a training accuracy of 77.44%. The validation loss was 0.5061, with a validation accuracy of 82.27%.\n",
+    "  \n",
+    "- **Epoch 2:** The training continued with improved performance, achieving a training loss of 0.4338 and a training accuracy of 84.47%. The validation loss decreased to 0.4402, and validation accuracy increased to 85.23%.\n",
+    "\n",
+    "- **Epoch 3:** The training loss further decreased to 0.3400, with a training accuracy of 87.78%. However, the validation loss slightly increased to 0.4845, with a small dip in validation accuracy to 84.00%.\n",
+    "\n",
+    "- **Epoch 4:** The model achieved a training loss of 0.2675 and a training accuracy of 90.21%. The validation loss increased to 0.5373, and validation accuracy dropped to 83.29%. At this point, early stopping was triggered to prevent overfitting, as the validation accuracy no longer improved.\n",
+    "\n",
+    "- **Final Validation Accuracy:** The best validation accuracy achieved was **85.23%**, indicating that the model performs well on unseen data.\n",
+    "\n",
+    "#### Model Architecture\n",
+    "\n",
+    "The final model used was **EfficientNetB0**, a highly efficient and scalable convolutional neural network. The architecture of the model includes:\n",
+    "\n",
+    "- **EfficientNet Features:** A series of layers that include convolutional layers, batch normalization, activation functions (SiLU), and squeeze-and-excitation blocks. These features are designed to extract meaningful patterns from the input images.\n",
+    "\n",
+    "- **Adaptive Average Pooling:** The features are passed through an adaptive average pooling layer to reduce the spatial dimensions to a single value per feature map.\n",
+    "\n",
+    "- **Fully Connected Classifier:** The final layer is a fully connected classifier with 1280 input features and 5 output classes, corresponding to the 5 possible disease classifications.\n",
+    "\n",
+    "#### Model Summary\n",
+    "\n",
+    "The model's training process demonstrates good performance, with the final validation accuracy reaching 85.23%. The use of early stopping helped prevent overfitting, ensuring the model's generalizability to new data. The model architecture, EfficientNetB0, is well-suited for this classification task, providing a balance between efficiency and accuracy.\n",
+    "\n",
+    "This model can now be saved and deployed for use in real-world applications, such as helping farmers identify cassava leaf diseases quickly and accurately.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Submission {-}"
    ]
   },
   {
@@ -1312,13 +1500,6 @@
     "test_df.to_csv('./output/test_predictions.csv', index=False)\n",
     "print(\"Test predictions saved to 'test_predictions.csv'\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
